tests/src/frontend/typechecking/invalid/unbound_field_alias.sk
class A(x: Int) {
  fun y(): void {
    void
  }
}

type TA = A;

fun test(a: TA): void {
  a.z
}
